Implementation of swagger server
