# src/therapist/swagger_server/models/inline_response202.py
@@ -1,64 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
-
-
-class InlineResponse202(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-    def __init__(self, message_id: str=None):  # noqa: E501
-        """InlineResponse202 - a model defined in Swagger
-
-        :param message_id: The message_id of this InlineResponse202.  # noqa: E501
-        :type message_id: str
-        """
-        self.swagger_types = {
-            'message_id': str
-        }
-
-        self.attribute_map = {
-            'message_id': 'messageId'
-        }
-        self._message_id = message_id
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'InlineResponse202':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The inline_response_202 of this InlineResponse202.  # noqa: E501
-        :rtype: InlineResponse202
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def message_id(self) -> str:
-        """Gets the message_id of this InlineResponse202.
-
-        Identifier for polling the result  # noqa: E501
-
-        :return: The message_id of this InlineResponse202.
-        :rtype: str
-        """
-        return self._message_id
-
-    @message_id.setter
-    def message_id(self, message_id: str):
-        """Sets the message_id of this InlineResponse202.
-
-        Identifier for polling the result  # noqa: E501
-
-        :param message_id: The message_id of this InlineResponse202.
-        :type message_id: str
-        """
-
-        self._message_id = message_id
