# src/therapist/swagger_server/models/signup_request.py
@@ -1,0 +1,120 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class SignupRequest(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, username: str=None, email: str=None, password: str=None):  # noqa: E501
+        """SignupRequest - a model defined in Swagger
+
+        :param username: The username of this SignupRequest.  # noqa: E501
+        :type username: str
+        :param email: The email of this SignupRequest.  # noqa: E501
+        :type email: str
+        :param password: The password of this SignupRequest.  # noqa: E501
+        :type password: str
+        """
+        self.swagger_types = {
+            'username': str,
+            'email': str,
+            'password': str
+        }
+
+        self.attribute_map = {
+            'username': 'username',
+            'email': 'email',
+            'password': 'password'
+        }
+        self._username = username
+        self._email = email
+        self._password = password
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'SignupRequest':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The SignupRequest of this SignupRequest.  # noqa: E501
+        :rtype: SignupRequest
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def username(self) -> str:
+        """Gets the username of this SignupRequest.
+
+
+        :return: The username of this SignupRequest.
+        :rtype: str
+        """
+        return self._username
+
+    @username.setter
+    def username(self, username: str):
+        """Sets the username of this SignupRequest.
+
+
+        :param username: The username of this SignupRequest.
+        :type username: str
+        """
+        if username is None:
+            raise ValueError("Invalid value for `username`, must not be `None`")  # noqa: E501
+
+        self._username = username
+
+    @property
+    def email(self) -> str:
+        """Gets the email of this SignupRequest.
+
+
+        :return: The email of this SignupRequest.
+        :rtype: str
+        """
+        return self._email
+
+    @email.setter
+    def email(self, email: str):
+        """Sets the email of this SignupRequest.
+
+
+        :param email: The email of this SignupRequest.
+        :type email: str
+        """
+        if email is None:
+            raise ValueError("Invalid value for `email`, must not be `None`")  # noqa: E501
+
+        self._email = email
+
+    @property
+    def password(self) -> str:
+        """Gets the password of this SignupRequest.
+
+
+        :return: The password of this SignupRequest.
+        :rtype: str
+        """
+        return self._password
+
+    @password.setter
+    def password(self, password: str):
+        """Sets the password of this SignupRequest.
+
+
+        :param password: The password of this SignupRequest.
+        :type password: str
+        """
+        if password is None:
+            raise ValueError("Invalid value for `password`, must not be `None`")  # noqa: E501
+
+        self._password = password
